# fastapi-voting

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1821be947f6a_.py  44b0de3b0e1b_many_models.py  5e3eef647529_init.py  78f0c4114e16_.py  a7010edd427e_init.py  bfd73f489d7b_new_models.py  f4f42a01f695_init.py
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21ea7cb6ae10_add_vot_dep_association.py  78f0c4114e16_.py  9b8182b1b69f_02_add_tables.py  bfd73f489d7b_new_models.py  c227a9258545_init.py
backend/src/fastapi_voting/: __init__.py  run.py
backend/src/fastapi_voting/app/: main.py
frontend/: package-lock.json  package.json  vite.config.js  Установка зависимостей.txt
frontend/src/: App.jsx  AppContent.jsx  index.css  main.jsx
frontend/src/components/: Breadcrumbs.jsx  Button.jsx  Charts.jsx  DepartmentList.jsx  DropdownMenu.jsx  Header.jsx  HeaderLogin.jsx  Inputs.jsx  PageTitle.jsx
frontend/src/components/Header/: AltHeaderDropdown.jsx  HeaderDropdown.jsx
frontend/src/components/constructor/: CreateVoting.jsx  Sidebar.jsx  Templates.jsx
frontend/src/components/details/: GeneralInfo.jsx  MyBulliten.jsx  ProgressCircle.jsx  Results.jsx  Stats.jsx  Voters.jsx
frontend/src/hooks/: useDepartments.js
frontend/src/pages/: ConstructorPage.jsx  DepartmentsPage.jsx  DetailsPage.jsx  LoginPage.jsx  MainPage.jsx  ProfilePage.jsx  RegisterPage.jsx  VotesPage.jsx
frontend/src/services/: api.js
src/fastapi_voting/: __init__.py  run.py
src/fastapi_voting/app/: main.py
(+94 files in other folders)
