[project]
name = "fastapi-voting"
version = "0.1.0"
description = ""
authors = [
    {name = "Lyric",email = "vertiipavel0684@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [
    {include = "fastapi_voting", from = "src"},
]
include = [
    "README.md"
]

[tool.poetry.dependencies]
python="3.11.9"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.43"
pymysql = "^1.1.2"
redis = "^6.4.0"
alembic = "^1.16.5"
asyncmy = "^0.2.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
